2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 558
	* client-src/selfcheck.c (check_options, check_disk): Check for
							      calcprog == NULL

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 521
	* client-src/clientconf.c (add_client_conf): Check result of realloc.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 447 and 449
	* restore-src/restore.c: Check for valid sendbackup request.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 407
	* restore-src/restore.c (restore): Set statinfo.st_size.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 189
	* common-src/file.c (sanitise_filename): Never return NULL.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/Makefile.am:    Remove tape-src and libamtape.
	* client-src/Makefile.am:     Remove tape-src and libamtape.
	* man/Makefile.am:            Cleanup.
	* oldrecover-src/Makefile.am: Remove tape-src and libamtape.
	* recover-src/Makefile.am:    Remove tape-src and libamtape.
	
2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 236
	* server-src/driver.c (handle_dumper_result): Check for
						      dumper->ev_read != NULL.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 553
	* restore-src/restore.c (search_a_tape): Check for desired_tape == NULL.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 556 and 557
	* common-src/security-util.c (bsd_recv_security_ok): Check result of
	  strtok, check service == NULL.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 161
	* client-src/calcsize.c (calc_load_file): Return NULL if fopen fail.
	* client-src/calcsize.c (main):  check NULL result from calc_load_file.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 84
	* server-src/amflush.c (main): Check return of lookup_disk.

2006-07-05  Jean-Louis Martineau <martineau@zmanda.com>